--- a/inst/rmarkdown/templates/uu_thesis/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/skeleton.Rmd
@@ -54,7 +54,7 @@ if (!require(devtools)) {
   install.packages("devtools", repos = "http://cran.rstudio.com")
 }
 if (!require(huwiwidown)) {
-  devtools::install_github("phister/huwiwidown")
+  devtools::install_github("lpandersson/uppsalaDown")
   library(huwiwidown)
 }
 ```
