--- a/inst/rmarkdown/templates/uu_thesis/skeleton/sections/02-method.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/sections/02-method.Rmd
@@ -1,11 +1,12 @@
-# Methodology
+<!-- # Methodology -->
+# Metod {#sec:metod}
 
 * How was the data analyzed ?
 
-* Present the underlying economic model/theory and give reasons why it is
+* Present the underlying statistical model/theory and give reasons why it is
   suitable to answer the given problem[^1].
 
-* Present econometric/statistical estimation method and give reasons why it is
+* Present the statistical estimation method and give reasons why it is
   suitable to answer the given problem.
 
 * Allows the reader to judge the validity of the study and its findings.
