--- a/inst/rmarkdown/templates/uu_thesis/skeleton/sections/05-conclusion.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/sections/05-conclusion.Rmd
@@ -1,4 +1,6 @@
-# Conclusion
+<!-- # Conclusion -->
+# Slutsatser {#sec:slutsats}
+
 
 * Give a short summary of what has been done and what has been found.
 
