--- a/inst/rmarkdown/templates/uu_thesis/skeleton/sections/98-references.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/sections/98-references.Rmd
@@ -1,6 +1,8 @@
 \newpage
 
-# References {-}
+# Källförteckning {-}
+<!-- # References {-} -->
+
 
 <!--
 To remove the indentation of the first entry.
