--- a/inst/rmarkdown/templates/uu_thesis/skeleton/sections/99-appendix.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/sections/99-appendix.Rmd
@@ -1,15 +1,17 @@
 \appendix
-# Appendix
+<!-- # Appendix -->
+
+# Bilaga
 
 Here goes the appendix!
 
-## Figures
+## Figurer
 
 ```{r graph2, echo=FALSE, out.extra = "", fig.cap="Estimated residuals (2) from model XXX. ...", out.width = "50%"}
 knitr::include_graphics("figures/graph.eps")
 ```
 
-## Tables
+## Tabeller
 
 \begin{table}[ht]
     \begin{center}
