--- a/inst/rmarkdown/templates/uu_thesis/skeleton/prelim/00-abbreviations.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/prelim/00-abbreviations.Rmd
@@ -1,4 +1,6 @@
-# List of Abbreviations {-}
+<!-- # List of Abbreviations {-} -->
+# Förkortningar {-}
+
 
 \begin{tabular}{rp{0.2cm}lp{1cm}rp{0.2cm}l}
     CPI     & &  Consumer Price Index   & & ETF     & &  Equity Traded Funds  \\
