--- a/inst/rmarkdown/templates/uu_thesis/skeleton/prelim/00-abstract.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/prelim/00-abstract.Rmd
@@ -1,13 +1,4 @@
-# Abstract {-}
+<!-- # Abstract {-} -->
+# Sammanfattning {-}
 
-This is the template for a thesis at the Chair of Econometrics of
-Humboldt--Universität zu Berlin. A popular approach to write a thesis or a
-paper is the IMRAD method (Introduction, Methods, Results and Discussion). This
-approach is not mandatory! You can find more information about formal
-requirements in the booklet `Hinweise zur Gestaltung der äußeren Form von
-Diplomarbeiten' which is available in the office of studies.
- 
-The abstract should not be longer than a paragraph of around 10-15 lines (or
-about 150 words). The abstract should contain a concise description of the
-econometric/economic problem you analyze and of your results. This allows the
-busy reader to obtain quickly a clear idea of the thesis content.
+A clearly worded, short, precise, abstract of no more than 300 Words; No formulas; Avoid references utmost; Same tense; No indentation or enumeration etc.; Write in normal text (no italic, bold or underline)
