--- a/inst/rmarkdown/templates/uu_thesis/skeleton/sections/04-results.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/sections/04-results.Rmd
@@ -1,4 +1,5 @@
-# Results
+<!-- # Results -->
+# Resultat {#sec:resultat}
 
 * Organize material and present results.
 
@@ -42,7 +43,7 @@ knitr::include_graphics("figures/graph.eps")
 
 ## Review of Results
 
-*  Do the results support or do they contradict economic theory ?
+*  Do the results support or do they contradict theory ?
 
 *  What does the reader learn from the results?
 
