--- a/index.Rmd
+++ b/index.Rmd
@@ -50,9 +50,9 @@ index.Rmd file and then knit again.
 if (!require(devtools)) {
   install.packages("devtools", repos = "http://cran.rstudio.com")
 }
-if (!require(huwiwidown)) {
+if (!require(uppsaladown)) {
   devtools::install_github("lpandersson/uppsaladown")
-  library(huwiwidown)
+  library(uppsaladown)
 }
 ```
 
