--- a/inst/rmarkdown/templates/uu_thesis/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/skeleton.Rmd
@@ -45,14 +45,14 @@ index.Rmd file and then knit again.
 -->
 
 ```{r include_packages, include = FALSE}
-# This chunk ensures that the `huwiwidown` package is installed and loaded. This
+# This chunk ensures that the `uppsaldown` package is installed and loaded. This
 # package includes the template files for the thesis.
 if (!require(devtools)) {
   install.packages("devtools", repos = "http://cran.rstudio.com")
 }
-if (!require(huwiwidown)) {
-  devtools::install_github("lpandersson/uppsalaDown")
-  library(huwiwidown)
+if (!require(uppsaldown)) {
+  devtools::install_github("lpandersson/uppsaldown")
+  library(uppsaldown)
 }
 ```
 
