--- a/inst/rmarkdown/templates/uu_thesis/skeleton/template.tex
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/template.tex
@@ -2,6 +2,7 @@
 % --- PREAMBLE ---
 % -------------------------------
 \documentclass[a4paper,11pt]{article}
+\usepackage[utf8]{inputenc}
 
 $if(swedish)$
 \usepackage[T1]{fontenc}
