--- a/inst/rmarkdown/templates/uu_thesis/skeleton/sections/03-data.Rmd
+++ b/inst/rmarkdown/templates/uu_thesis/skeleton/sections/03-data.Rmd
@@ -81,3 +81,10 @@ kableExtra::row_spec(2, hline_after = T)
     \caption{This table was handwritten with LaTeX.}
     \label{tab:table2}
     \end{table}
+
+
+  * It is also easy to include pictures, see for example Figure \@ref(fig:figureUniversitetshuset)
+
+```{r figureUniversitetshuset, echo = FALSE, fig.cap = "Universitetshuset", out.width = "400px"}
+knitr::include_graphics("images/universitetshuset.jpg")
+```
